[package]
name = "leetcode"
version = "0.1.0"
authors = ["tran.luy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
json = "0.12.0"
csv = "1.1.1"
serde = { version = "1.0.101", features = ["derive"] }
